
[project]
name = "pycrypto"
version = "0.1.0"
description = ""
authors = [{ name="Wesley Silva", email="wesleysilv@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
package-mode = false

dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "numpy (>=2.2,<3.0)",
    "binance-connector (>=3.12.0,<4.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "ta-lib (>=0.6.8,<0.7.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "langchain-google-genai (>=4.2.0,<5.0.0)",
    "langchain-core (>=1.2.7,<2.0.0)",
    "langchain (>=1.2.6,<2.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-watch (>=4.2.0,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
]
doc = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocstrings (>=1.0.0,<2.0.0)",
    "mkdocstrings-python (>=2.0.1,<3.0.0)",
    "mkdocs-material (>=9.7.1,<10.0.0)"
]


[tool.poetry.dependencies]
python = ">=3.13,<4.0"


# ------------------------- taskipy -------------------------
[tool.taskipy.tasks]
lint = "pylint pycrypto/"
ruff = "ruff format ./pycrypto && ruff check --fix ./pycrypto"
migrate = "alembic upgrade head"
run = "fastapi dev run.py"
test_github = "pytest -s -m 'not binance_websocket' "
test = "pytest -s -v --cov=pycrypto"
post_test = "coverage html"
docs = "mkdocs serve -w . --watch-theme -a 'localhost:8081'"

# ------------------------- pytest -------------------------
[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
python_files = "test_*.py"
addopts = "--doctest-modules"
markers = [
    "delete_db_data: Tests who can delete some info on postgres database.", 
    "binance_websocket: Tests who use binance websocket."
    ]


# ------------------------- pylint -------------------------
[tool.pylint.master]
ignore-paths = ["^tests/.*$"]


[tool.pylint.format]
max-line-length = 180  

# TODO: revisar as regras de lint afim de diminuir as exceções
[tool.pylint."messages control"]
disable = [
    "too-few-public-methods",       # R0903
    "too-many-arguments",           # R0913
    "too-many-locals",              # R0914
    "too-many-positional-arguments",# R0917

    "no-member",                    # E1101
    "dangerous-default-value",      # W0102
    "unnecessary-lambda",           # W0108
    "fixme",                        # W0511: TODOs

    "missing-module-docstring",   # C0114
    "missing-class-docstring",    # C0115
    "missing-function-docstring", # C0116

    "broad-exception-raised",       # W0719
    "broad-exception-caught",       # R0914

    "logging-fstring-interpolation",# W1203
    "invalid-overridden-method",    # W0236 
    "consider-using-f-string",      # C0209
    "invalid-name",                 # C0103
    "c-extension-no-member",        # I1101
    "too-many-branches",            # R0912: Too many branches (13/12)
    "protected-access",             
    "duplicate-code"                # R0801: Binance spot/websocket has columns on different ordering. We must repeat something like this.
]

# ------------------------- ruff -------------------------

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "D400", # First line should end with a period
    "D401", # First line of docstring should be in imperative mood
    "D415", # First line should end with a period, question mark, or exclamation point
    "E501", # Line too long. I accept only advise by pylint. Not fix by ruff.
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "F401"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["pycrypto"]


